--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,4 @@
 @import './modul-window-card/modul-window-card';
 @import './modul-window-our-team/modul-window-our-team';
 @import './pagination/pagination-styles';
+@import './events-section/modal-favorite';
