--- a/src/templates/modal-card-details.hbs
+++ b/src/templates/modal-card-details.hbs
@@ -84,6 +84,9 @@
                 </ul>
             </div>
         </div>
-        <button class="modal__btn__more" type="submit" data-name="{{name}}">MORE FROM THIS AUTHOR</button>
+        <div class="modal__buttons">
+            <button class="modal__btn__more" type="submit" data-name="{{name}}">MORE FROM THIS AUTHOR</button>
+            <button class="modal__btn__more favorite-button">Add to favorite</button>
+        </div>
     </div>
 </div>
