--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -1,353 +1,341 @@
 body.modal-open {
-  overflow: hidden;
+    overflow: hidden;
 }
+
 .backdrop__modal.is--hidden {
-  opacity: 0;
-  pointer-events: none;
+    opacity: 0;
+    pointer-events: none;
 }
+
 .backdrop__modal.is--hidden .modal-box {
-  transform: translate(-50%, -50%) scale(2);
+    transform: translate(-50%, -50%) scale(2);
 }
+
 .backdrop__modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  overflow: auto;
-  width: 100%;
-  height: 100%;
-
-  opacity: 1;
-  background: rgba(32, 13, 29, 0.6);
-  backdrop-filter: blur(3px);
-  z-index: 2;
-  transition: opacity 250ms linear;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    background: rgba(32, 13, 29, 0.6);
+    backdrop-filter: blur(3px);
+    z-index: 2;
+    transition: opacity 250ms linear;
 }
 
 .modal-box {
-  @media screen and (max-width: 319px) {
-    width: 272px;
-    min-height: auto;
-
-    border-radius: 150px 0 150px 0;
-  }
-  @media screen and (min-width: 320px) {
-    width: 272px;
-    min-height: auto;
-
-    border-radius: 150px 0 150px 0;
-  }
-  @media screen and (min-width: 595px) {
-    width: 595px;
-    min-height: auto;
-
-    border-radius: 300px 0 300px 0;
-  }
-  @media screen and (min-width: 1050px) {
-    width: 942px;
-    min-height: auto;
-
-    transform: translate(-50%, -50%) scale(0.7);
-
-    border-radius: 300px 0 300px 0;
-  }
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0.8);
-  transition: transform 250ms linear;
-
-  background-color: rgba(255, 242, 253, 1);
+    @media screen and (max-width: 319px) {
+        width: 272px;
+        min-height: auto;
+        border-radius: 150px 0 150px 0;
+    }
+    @media screen and (min-width: 320px) {
+        width: 272px;
+        min-height: auto;
+        border-radius: 150px 0 150px 0;
+    }
+    @media screen and (min-width: 595px) {
+        width: 595px;
+        min-height: auto;
+        border-radius: 300px 0 300px 0;
+    }
+    @media screen and (min-width: 1050px) {
+        width: 942px;
+        min-height: auto;
+        transform: translate(-50%, -50%) scale(0.7);
+        border-radius: 300px 0 300px 0;
+    }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    transition: transform 250ms linear;
+    background-color: rgba(255, 242, 253, 1);
 }
+
 .backdrop__modal::-webkit-scrollbar {
-  width: 0;
+    width: 0;
 }
+
 .modal__window {
-  @media screen and (max-width: 319px) {
-    padding: 75px 12px 104px 12px;
-  }
-  @media screen and (min-width: 320px) {
-    padding: 75px 12px 104px 12px;
-  }
-  @media screen and (min-width: 595px) {
-    padding: 28px 17px 56px 50px;
-  }
-  @media screen and (min-width: 1050px) {
-    padding: 62px 30px;
-  }
+    @media screen and (max-width: 319px) {
+        padding: 75px 12px 104px 12px;
+    }
+    @media screen and (min-width: 320px) {
+        padding: 75px 12px 104px 12px;
+    }
+    @media screen and (min-width: 595px) {
+        padding: 28px 17px 56px 50px;
+    }
+    @media screen and (min-width: 1050px) {
+        padding: 62px 30px;
+    }
 }
+
 .modal__circle {
-  @media screen and (max-width: 319px) {
-    width: 102px;
-    height: 102px;
-    margin-bottom: 18px;
-  }
-  @media screen and (min-width: 320px) {
-    width: 102px;
-    height: 102px;
-    margin-bottom: 18px;
-  }
-  @media screen and (min-width: 595px) {
-    width: 70px;
-    height: 70px;
-    margin-bottom: 43px;
-  }
-  @media screen and (min-width: 1050px) {
-    width: 132px;
-    height: 132px;
-    margin-bottom: 40px;
-  }
-
-  position: relative;
-  overflow: hidden;
-  margin: 0 auto;
-
-  border-radius: 50%;
+    @media screen and (max-width: 319px) {
+        width: 102px;
+        height: 102px;
+        margin-bottom: 18px;
+    }
+    @media screen and (min-width: 320px) {
+        width: 102px;
+        height: 102px;
+        margin-bottom: 18px;
+    }
+    @media screen and (min-width: 595px) {
+        width: 70px;
+        height: 70px;
+        margin-bottom: 43px;
+    }
+    @media screen and (min-width: 1050px) {
+        width: 132px;
+        height: 132px;
+        margin-bottom: 40px;
+    }
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    border-radius: 50%;
 }
+
 .modal__btn {
-  position: absolute;
-  display: block;
-  right: 25px;
-  top: 25px;
-
-  width: 30px;
-  height: 30px;
-
-  padding: 0;
-
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
+    position: absolute;
+    display: block;
+    right: 25px;
+    top: 25px;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .modal__btn_close::before {
-  transform: rotate(-45deg);
-  transition: transform 300ms linear;
-
-  position: absolute;
-  display: block;
-  content: '';
-  width: 30px;
-  height: 3px;
-
-  background-color: #4c00fe;
+    transform: rotate(-45deg);
+    transition: transform 300ms linear;
+    position: absolute;
+    display: block;
+    content: '';
+    width: 30px;
+    height: 3px;
+    background-color: #4c00fe;
 }
+
 .modal__btn:hover .modal__btn_close::before {
-  transform: rotate(-130deg);
+    transform: rotate(-130deg);
 }
+
 .modal__btn:hover .modal__btn_close::after {
-  transform: rotate(130deg);
+    transform: rotate(130deg);
 }
 
 .modal__btn_close::after {
-  transform: rotate(45deg);
-  transition: transform 300ms linear;
-
-  position: absolute;
-  display: block;
-  content: '';
-  width: 30px;
-  height: 3px;
-
-  background-color: #4c00fe;
-}
-.modal__container {
-  @media screen and (min-width: 320px) {
-  }
-
-  display: flex;
-  justify-content: space-between;
-}
-.modal__img {
-  position: relative;
-  overflow: hidden;
-  @media screen and (max-width: 319px) {
-    display: none;
-  }
-  @media screen and (min-width: 320px) {
-    display: none;
-  }
-  @media screen and (min-width: 595px) {
+    transform: rotate(45deg);
+    transition: transform 300ms linear;
+    position: absolute;
     display: block;
-    width: 233px;
-    height: 416px;
-  }
-  @media screen and (min-width: 1050px) {
-    width: 360px;
-    height: 640px;
-  }
+    content: '';
+    width: 30px;
+    height: 3px;
+    background-color: #4c00fe;
 }
+
+.modal__container {
+    @media screen and (min-width: 320px) {}
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal__img {
+    position: relative;
+    overflow: hidden;
+    @media screen and (max-width: 319px) {
+        display: none;
+    }
+    @media screen and (min-width: 320px) {
+        display: none;
+    }
+    @media screen and (min-width: 595px) {
+        display: block;
+        width: 233px;
+        height: 416px;
+    }
+    @media screen and (min-width: 1050px) {
+        width: 360px;
+        height: 640px;
+    }
+}
+
 .modal__info {
-  width: 450px;
-  @media screen and (min-width: 595px) {
-    width: 265px;
-  }
-  @media screen and (min-width: 1050px) {
     width: 450px;
-  }
+    @media screen and (min-width: 595px) {
+        width: 265px;
+    }
+    @media screen and (min-width: 1050px) {
+        width: 450px;
+    }
 }
+
 .modal__list {
-  margin-top: 0;
-  margin-bottom: 0;
-
-  padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
 }
+
 .modal__title {
-  @media screen and (max-width: 319px) {
-    margin-bottom: 5px;
-    font-size: 20px;
-    text-align: center;
-  }
-  @media screen and (min-width: 320px) {
-    margin-bottom: 5px;
-    font-size: 20px;
-    text-align: center;
-  }
-  @media screen and (min-width: 595px) {
-    text-align: left;
-  }
-  @media screen and (min-width: 1050px) {
-    margin-bottom: 7px;
-    font-size: 24px;
-  }
-
-  display: block;
-  font-weight: 600;
-  line-height: 1.2;
-
-  color: $accent-color;
+    @media screen and (max-width: 319px) {
+        margin-bottom: 5px;
+        font-size: 20px;
+        text-align: center;
+    }
+    @media screen and (min-width: 320px) {
+        margin-bottom: 5px;
+        font-size: 20px;
+        text-align: center;
+    }
+    @media screen and (min-width: 595px) {
+        text-align: left;
+    }
+    @media screen and (min-width: 1050px) {
+        margin-bottom: 7px;
+        font-size: 24px;
+    }
+    display: block;
+    font-weight: 600;
+    line-height: 1.2;
+    color: $accent-color;
 }
 
 .modal__text {
-  @media screen and (max-width: 319px) {
-    text-align: center;
-
-    margin-bottom: 10px;
-
-    font-size: 16px;
-    line-height: 1.25;
-  }
-  @media screen and (min-width: 320px) {
-    text-align: center;
-
-    margin-bottom: 10px;
-
-    font-size: 16px;
-    line-height: 1.25;
-  }
-  @media screen and (min-width: 595px) {
-    text-align: left;
-  }
-  @media screen and (min-width: 1050px) {
-    margin-bottom: 20px;
-    font-size: 18px;
-  }
-
-  margin-top: 0;
-
-  line-height: 1.2;
+    @media screen and (max-width: 319px) {
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    @media screen and (min-width: 320px) {
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    @media screen and (min-width: 595px) {
+        text-align: left;
+    }
+    @media screen and (min-width: 1050px) {
+        margin-bottom: 20px;
+        font-size: 18px;
+    }
+    margin-top: 0;
+    line-height: 1.2;
 }
+
+.modal__location-link {
+    color: $light-theme-main-text-color;
+}
+
+.modal__location-link:hover {
+    color: $accent-color;
+}
+
 .modal_buy:not(:last-child) {
-  @media screen and (max-width: 319px) {
-    margin-bottom: 20px;
-  }
-  @media screen and (min-width: 320px) {
-    margin-bottom: 20px;
-  }
-  @media screen and (min-width: 1050px) {
-    margin-bottom: 30px;
-  }
+    @media screen and (max-width: 319px) {
+        margin-bottom: 20px;
+    }
+    @media screen and (min-width: 320px) {
+        margin-bottom: 20px;
+    }
+    @media screen and (min-width: 1050px) {
+        margin-bottom: 30px;
+    }
 }
+
 .modal__barcode::before {
-  display: inline-block;
-  vertical-align: sub;
-
-  content: '';
-  width: 29px;
-  height: 19px;
-
-  margin-right: 13px;
-
-  background-image: url('../images/barcode.png');
+    display: inline-block;
+    vertical-align: sub;
+    content: '';
+    width: 29px;
+    height: 19px;
+    margin-right: 13px;
+    background-image: url('../images/barcode.png');
 }
+
 .modal_buy .btn {
-  @media screen and (max-width: 319px) {
-    display: block;
-    margin: 0 auto;
-  }
-  @media screen and (min-width: 320px) {
-    display: block;
-    margin: 0 auto;
-  }
-  @media screen and (min-width: 595px) {
-    margin: 0;
-  }
-  width: 145px;
-  height: 40px;
-
-  font-size: 16px;
-  line-height: 1.25;
-
-  background-color: #4c00fe;
-  color: #ffffff;
-  border-radius: 5px;
+    @media screen and (max-width: 319px) {
+        display: block;
+        margin: 0 auto;
+    }
+    @media screen and (min-width: 320px) {
+        display: block;
+        margin: 0 auto;
+    }
+    @media screen and (min-width: 595px) {
+        margin: 0;
+    }
+    width: 145px;
+    height: 40px;
+    font-size: 16px;
+    line-height: 1.25;
+    background-color: #4c00fe;
+    color: #ffffff;
+    border-radius: 5px;
 }
+
 .modal_buy--btn-link {
-  color: #ffffff;
+    color: #ffffff;
 }
+
 .modal__btn__more {
-  @media screen and (max-width: 319px) {
-    width: 226px;
-    height: 40px;
-    margin-top: 25px;
-  }
-  @media screen and (min-width: 320px) {
-    width: 230px;
-    height: 40px;
-    margin-top: 25px;
-  }
-  @media screen and (min-width: 595px) {
-    width: 255px;
-    height: 40px;
-    margin-top: 43px;
-  }
-  @media screen and (min-width: 1050px) {
-    width: 255px;
-    height: 40px;
-
-    margin-top: 45px;
-  }
-
-  display: block;
-  margin: 0 auto;
-  padding: 0;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-
-  background-color: transparent;
-  color: #4c00fe;
-  border-radius: 5px;
-  border-color: #4c00fe;
+    @media screen and (max-width: 319px) {
+        width: 226px;
+        height: 40px;
+        margin-top: 25px;
+    }
+    @media screen and (min-width: 320px) {
+        width: 230px;
+        height: 40px;
+        margin-top: 25px;
+    }
+    @media screen and (min-width: 595px) {
+        width: 255px;
+        height: 40px;
+        margin-top: 43px;
+    }
+    @media screen and (min-width: 1050px) {
+        width: 255px;
+        height: 40px;
+        margin-top: 45px;
+    }
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.25;
+    background-color: transparent;
+    color: #4c00fe;
+    border-radius: 5px;
+    border-color: #4c00fe;
 }
-.modal__circle img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
-  height: 100%;
-  width: auto;
+.modal__circle img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: auto;
 }
 
 .modal__img img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  height: 100%;
-  width: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: auto;
 }
