fixes button and logo press

--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -1,6 +1,7 @@
 .logo {
   max-width: 100%;
   position: absolute;
+  z-index: 2;
   top: 0;
   left: 0;
   background-size: contain;
@@ -16,6 +17,7 @@ body.dark-theme {
 
 .toolbar {
   position: absolute;
+  z-index: 1;
   display: flex;
   right: 100px;
   top: 20px;
