adds arrow icon in select

--- a/src/sass/events-section/_one-card-styles.scss
+++ b/src/sass/events-section/_one-card-styles.scss
@@ -131,3 +131,6 @@
   // background-image: url(/images/location-point.svg);
   // background-size: 6px 9px;
 }
+.events__locationh-icon {
+  fill: #fff;
+}
