--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -44,13 +44,13 @@ body.modal-open {
   @media screen and (min-width: 1050px) {
     width: 942px;
     min-height: auto;
-    transform: translate(-50%, -50%) scale(0.7);
+
     border-radius: 300px 0 300px 0;
   }
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.8);
+  transform: translate(-50%, -50%) scale(0.6);
   transition: transform 250ms linear;
   background-color: rgba(255, 242, 253, 1);
 }
@@ -342,28 +342,27 @@ body.modal-open {
     width: 255px;
     height: 40px;
     margin-top: 15px;
-    
   }
   position: relative;
 
   text-transform: uppercase;
 }
-.modal__btn__more.favorite-button::before {
-  display: block;
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 92%;
-  transform: translate(-50%, -50%);
+// .modal__btn__more.favorite-button::before {
+//   display: block;
+//   content: '';
+//   position: absolute;
+//   top: 50%;
+//   left: 92%;
+//   transform: translate(-50%, -50%);
 
-  width: 30px;
-  height: 30px;
+//   width: 30px;
+//   height: 30px;
 
-  background-image: url('../images/favorit_btn.svg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+//   background-image: url('../images/favorit_btn.svg');
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
 .modal__circle img {
   position: absolute;
   top: 50%;
