--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -9,10 +9,102 @@
 
 body.light-theme {
   background-color: #dcdcdc;
+  @media screen and(max-width: $to-mobile) {
+    background-image: url(../images/noise-body.png);
+    background-size: cover;
+    background-position: center;
+  }
+  @media screen and(min-width: $mobile) {
+    background-image: url(../images/noise-body.png);
+    background-size: cover;
+    background-position: center;
+  }
+  @media screen and(min-width: $tablet) {
+    background-image: url(../images/svg/EllipseLightTheme-2.svg), url(../images/svg/Ellipse-5.svg),
+      url(../images/svg/Ellipse-6.svg), url(../images/svg/EllipseLightTheme-11.svg),
+      url(../images/svg/Ellipse-10.svg), url(../images/svg/Ellipse-4.svg),
+      url(../images/svg/EllipseLightTheme-2.svg), url(../images/svg/Ellipse-5.svg),
+      url(../images/svg/Ellipse-4.svg), url(../images/svg/Line-1.svg), url(../images/svg/Line-1.svg),
+      url(../images/svg/Line-1.svg), url(../images/svg/Line-1.svg), url(../images/svg/Line-1.svg),
+      url(../images/svg/Line-6.svg), url(../images/svg/Line-6.svg), url(../images/noise-body.png);
+
+    background-size: 80px, 126px, 237px, 80px, 126px, 237px, 80px, 126px, 237px, 1px, 1px, 1px, 1px,
+      1px, 1px, 1px, cover;
+    background-repeat: no-repeat;
+    background-position: left 46px top 602px, left 26px top 582px, left 26px top 1882px,
+      left 46px bottom 0px, left 26px bottom 0px, right 25px top 1010px, right 45px top 1910px,
+      right 25px top 1890px, right 25px top 3020px, left 86px top -160px, left 86px top 708px,
+      left 86px top 1450px, left 86px top 2150px, left 86px top 2651px, right 86px top -405px,
+      right 86px top 2015px, center;
+  }
+  @media screen and(min-width: $desktop) {
+    background-image: url(../images/svg/EllipseLightTheme-2.svg), url(../images/svg/Ellipse-5.svg),
+      url(../images/svg/Ellipse-6.svg), url(../images/svg/EllipseLightTheme-11.svg),
+      url(../images/svg/Ellipse-10.svg), url(../images/svg/Ellipse-4.svg),
+      url(../images/svg/EllipseLightTheme-2.svg), url(../images/svg/Ellipse-7.svg),
+      url(../images/svg/Ellipse-9.svg), url(../images/svg/Line-1.svg), url(../images/svg/Line-3.svg),
+      url(../images/svg/Line-3.svg), url(../images/svg/Line-2.svg), url(../images/svg/Line-2.svg),
+      url(../images/svg/Line-2.svg), url(../images/noise-body.png);
+
+    background-size: 136px, 216px, 334px, 136px, 216px, 334px, 136px, 216px, 334px, 1px, 1px, 1px,
+      1px, 1px, 1px, cover;
+    background-repeat: no-repeat;
+    background-position: left 47px top 882px, left 7px top 842px, left 23px top 1554px,
+      left 47px bottom 0px, left 7px bottom 0px, left 976px top 528px, left 1117px top 1989px,
+      left 1077px top 1949px, left 976px top 2252px, left 115px top 100px, left 115px top 1057px,
+      left 115px top 1287px, left 1185px top 110px, left 1185px top 754px, left 1185px top 1860px,
+      center;
+  }
 }
 
 body.dark-theme {
   background-color: #0e0e0e;
+  @media screen and(max-width: $to-mobile) {
+    background-image: url(../images/noise-body.png);
+    background-size: cover;
+    background-position: center;
+  }
+  @media screen and(min-width: $mobile) {
+    background-image: url(../images/noise-body.png);
+    background-size: cover;
+    background-position: center;
+  }
+  @media screen and(min-width: $tablet) {
+    background-image: url(../images/svg/Ellipse-2.svg), url(../images/svg/Ellipse-5.svg),
+      url(../images/svg/Ellipse-6.svg), url(../images/svg/Ellipse-11.svg),
+      url(../images/svg/Ellipse-10.svg), url(../images/svg/Ellipse-4.svg),
+      url(../images/svg/Ellipse-2.svg), url(../images/svg/Ellipse-5.svg),
+      url(../images/svg/Ellipse-4.svg), url(../images/svg/Line-1.svg), url(../images/svg/Line-1.svg),
+      url(../images/svg/Line-1.svg), url(../images/svg/Line-1.svg), url(../images/svg/Line-1.svg),
+      url(../images/svg/Line-6.svg), url(../images/svg/Line-6.svg), url(../images/noise-body.png);
+
+    background-size: 80px, 126px, 237px, 80px, 126px, 237px, 80px, 126px, 237px, 1px, 1px, 1px, 1px,
+      1px, 1px, 1px, cover;
+    background-repeat: no-repeat;
+    background-position: left 46px top 602px, left 26px top 582px, left 26px top 1882px,
+      left 46px bottom 0px, left 26px bottom 0px, right 25px top 1010px, right 45px top 1910px,
+      right 25px top 1890px, right 25px top 3020px, left 86px top -160px, left 86px top 708px,
+      left 86px top 1450px, left 86px top 2150px, left 86px top 2651px, right 86px top -405px,
+      right 86px top 2015px, center;
+  }
+  @media screen and(min-width: $desktop) {
+    background-image: url(../images/svg/Ellipse-2.svg), url(../images/svg/Ellipse-5.svg),
+      url(../images/svg/Ellipse-6.svg), url(../images/svg/Ellipse-11.svg),
+      url(../images/svg/Ellipse-10.svg), url(../images/svg/Ellipse-4.svg),
+      url(../images/svg/Ellipse-8.svg), url(../images/svg/Ellipse-7.svg),
+      url(../images/svg/Ellipse-9.svg), url(../images/svg/Line-1.svg), url(../images/svg/Line-3.svg),
+      url(../images/svg/Line-3.svg), url(../images/svg/Line-2.svg), url(../images/svg/Line-2.svg),
+      url(../images/svg/Line-2.svg), url(../images/noise-body.png);
+
+    background-size: 136px, 216px, 334px, 136px, 216px, 334px, 136px, 216px, 334px, 1px, 1px, 1px,
+      1px, 1px, 1px, cover;
+    background-repeat: no-repeat;
+    background-position: left 47px top 882px, left 7px top 842px, left 23px top 1554px,
+      left 47px bottom 0px, left 7px bottom 0px, left 976px top 528px, left 1117px top 1989px,
+      left 1077px top 1949px, left 976px top 2252px, left 115px top 100px, left 115px top 1057px,
+      left 115px top 1287px, left 1185px top 110px, left 1185px top 754px, left 1185px top 1860px,
+      center;
+  }
 }
 
 .toolbar {
