--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -11,20 +11,38 @@ body.light-theme {
   background-color: #dcdcdc;
 
   & .hero {
-    background-image: linear-gradient(rgba(211, 211, 211, 0.5), rgba(211, 211, 211, 0.5)),
+    background-image: linear-gradient(
+        165deg,
+        rgba(14, 14, 14, 1) 0%,
+        rgba(14, 14, 14, 1) 18%,
+        rgba(207, 36, 168, 0.4042661009716386) 72%,
+        rgba(62, 62, 62, 1) 100%
+      ),
       url('../images/hero-mobile.jpg');
   }
   @media screen and (min-device-pixel-ratio: 2) and (min-width: $mobile),
     screen and (min-resolution: 192dpi) and (min-width: $mobile),
     screen and (min-resolution: 2dppx) and (min-width: $mobile) {
     .hero {
-      background-image: linear-gradient(rgba(211, 211, 211, 0.5), rgba(211, 211, 211, 0.5)),
+      background-image: linear-gradient(
+          165deg,
+          rgba(14, 14, 14, 1) 0%,
+          rgba(14, 14, 14, 1) 18%,
+          rgba(207, 36, 168, 0.4042661009716386) 72%,
+          rgba(62, 62, 62, 1) 100%
+        ),
         url('../images/hero-mobile@2x.jpg');
     }
   }
   @media screen and (min-width: $tablet) {
     .hero {
-      background-image: linear-gradient(rgba(211, 211, 211, 0.5), rgba(211, 211, 211, 0.5)),
+      background-image: linear-gradient(
+          165deg,
+          rgba(14, 14, 14, 1) 0%,
+          rgba(14, 14, 14, 1) 18%,
+          rgba(207, 36, 168, 0.4042661009716386) 72%,
+          rgba(62, 62, 62, 1) 100%
+        ),
         url('../images/hero-tablet.jpg');
     }
   }
@@ -32,13 +50,25 @@ body.light-theme {
     screen and (min-resolution: 192dpi) and (min-width: $tablet),
     screen and (min-resolution: 2dppx) and (min-width: $tablet) {
     .hero {
-      background-image: linear-gradient(rgba(211, 211, 211, 0.5), rgba(211, 211, 211, 0.5)),
+      background-image: linear-gradient(
+          165deg,
+          rgba(14, 14, 14, 1) 0%,
+          rgba(14, 14, 14, 1) 18%,
+          rgba(207, 36, 168, 0.4042661009716386) 72%,
+          rgba(62, 62, 62, 1) 100%
+        ),
         url('../images/hero-tablet@2x.jpg');
     }
   }
   @media screen and (min-width: $desktop) {
     .hero {
-      background-image: linear-gradient(rgba(211, 211, 211, 0.5), rgba(211, 211, 211, 0.5)),
+      background-image: linear-gradient(
+          165deg,
+          rgba(14, 14, 14, 1) 0%,
+          rgba(14, 14, 14, 1) 18%,
+          rgba(207, 36, 168, 0.4042661009716386) 72%,
+          rgba(62, 62, 62, 1) 100%
+        ),
         url('../images/hero.jpg');
     }
   }
@@ -46,7 +76,13 @@ body.light-theme {
     screen and (min-resolution: 192dpi) and (min-width: $desktop),
     screen and (min-resolution: 2dppx) and (min-width: $desktop) {
     .hero {
-      background-image: linear-gradient(rgba(211, 211, 211, 0.5), rgba(211, 211, 211, 0.5)),
+      background-image: linear-gradient(
+          165deg,
+          rgba(14, 14, 14, 1) 0%,
+          rgba(14, 14, 14, 1) 18%,
+          rgba(207, 36, 168, 0.4042661009716386) 72%,
+          rgba(62, 62, 62, 1) 100%
+        ),
         url('../images/hero@2x.jpg');
     }
   }
