--- a/src/sass/modal-authentication/_modal-authentication.scss
+++ b/src/sass/modal-authentication/_modal-authentication.scss
@@ -159,6 +159,10 @@
   font-size: 20px;
   line-height: 1.25;
 
+  @media screen and(max-width: 365px) {
+    font-size: 16px;
+  }
+
   @media screen and(min-width: 1050px) {
     font-size: 30px;
   }
