--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <a href="">
+    <a href="./index.html">
       <div class="logo"></div>
     </a>
   </div>
@@ -10,19 +10,19 @@
     <!-- Разметка переключателя темы -->
     <div class="theme-switch">
       <span class="material-icons sun"> brightness_low </span>
-      
+
       <div class="theme-switch__control">
         <input
-        class="theme-switch__toggle"
-        type="checkbox"
-        name="theme"
-        id="theme-switch-toggle"
-        aria-label="Переключить между тёмной и светлой темой"
+          class="theme-switch__toggle"
+          type="checkbox"
+          name="theme"
+          id="theme-switch-toggle"
+          aria-label="Переключить между тёмной и светлой темой"
         />
         <label aria-hidden="true" class="theme-switch__track" for="theme-switch-toggle"> </label>
         <div aria-hidden="true" class="theme-switch__marker"></div>
       </div>
-      
+
       <span class="material-icons moon"> dark_mode </span>
     </div>
   </div>
