team modal small fix

--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden team__backdrop" data-modal>
   <div class="modal-team">
     <button data-modal-close class="modal__btn">
       <span class="modal__btn_close"></span>
