--- a/src/sass/modul-window-our-team/_modul-window-our-team.scss
+++ b/src/sass/modul-window-our-team/_modul-window-our-team.scss
@@ -1,154 +1,156 @@
-
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    opacity: 1;
-    backdrop-filter: blur(3px);
-    z-index: 2;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.team__backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(32, 13, 29, 0.6);
+  opacity: 1;
+  backdrop-filter: blur(3px);
+  z-index: 2;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
+.team__backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
-.backdrop.is-hidden .modal-team {
-    transform: translate(-50%, -50%) scale(1.1);
+.team__backdrop.is-hidden .modal-team {
+  transform: translate(-50%, -50%) scale(1.1);
 }
 .modal-team {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    width: 1100px;
-    height: 640px;
-    background-color: #FFF2FD;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 120px 0;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 1100px;
+  height: 640px;
+  background-color: #fff2fd;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 120px 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    padding: 0;
-    background-color: #FFF2FD;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-   border-radius: 50%;
-   cursor: pointer;
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  padding: 0;
+  background-color: #fff2fd;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modalTitle {
-    font-family: Montserrat;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    color: #DC56C5;
-    text-shadow: 2px 2px 4px #000000;
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 1.19;
-    text-align: center;
+  font-family: Montserrat;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: #dc56c5;
+  text-shadow: 2px 2px 4px #000000;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 1.19;
+  text-align: center;
 }
 
 .personal-item {
-    position: relative;
-    width: 180px;
-    height: 260px;
-    margin-right: 20px;
-    padding-bottom: 30px;
-    
-    background: #FFF2FD;
-    &:hover,
-    &:focus {
-        box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.12), 2px 1px 1px rgba(0, 0, 0, 0.14), -1px -2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 15px 0;
-    }
+  position: relative;
+  width: 180px;
+  height: 260px;
+  margin-right: 20px;
+  padding-bottom: 30px;
+
+  background: #fff2fd;
+  &:hover,
+  &:focus {
+    box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.12), 2px 1px 1px rgba(0, 0, 0, 0.14),
+      -1px -2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 15px 0;
+  }
 }
 
 .personal-item:nth-child(5n) {
-    margin-right: 0%;
+  margin-right: 0%;
 }
 .personal-photo {
-    width: 150px;
-    display: block;
-    margin: 0 auto;
-    border-radius: 8px 0;
-    margin-top: 12px;
+  width: 150px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 8px 0;
+  margin-top: 12px;
 }
 .headlines-name {
-    font-family: Montserrat;
-    margin-top: 12px;
-    margin-bottom: 5px;
-    color: #DC56C5;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.19;
-    text-align: center;
+  font-family: Montserrat;
+  margin-top: 12px;
+  margin-bottom: 5px;
+  color: #dc56c5;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.19;
+  text-align: center;
 }
 .position {
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 12px;
-    margin: 0;
-    line-height: 1.19;
-    color: #242424;
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 12px;
+  margin: 0;
+  line-height: 1.19;
+  color: #242424;
 }
 .headlines-list1 {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 80px;
-    margin-bottom: 20px;
-    text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 80px;
+  margin-bottom: 20px;
+  text-align: center;
 }
 .headlines-list2 {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 35px;
-    text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 35px;
+  text-align: center;
 }
 .social-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 28px;
-    height: 28px;
-    border-radius: 10px 0;
-    border: 1px solid #DC56C5;
-    background-color: black;
-    fill: white;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    &:hover,
-    &:focus {
-        background-color: rgba(220, 86, 197, 0.5);
-        fill: wheat;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  border-radius: 10px 0;
+  border: 1px solid #dc56c5;
+  background-color: black;
+  fill: white;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: rgba(220, 86, 197, 0.5);
+    fill: wheat;
+  }
 }
-.social>li:nth-child(1) {
-    margin-right: 10px;
+.social > li:nth-child(1) {
+  margin-right: 10px;
 }
 .social {
-    display: flex;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    right: 50%;
-    margin-top: 8px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  right: 50%;
+  margin-top: 8px;
+  justify-content: center;
+  align-items: center;
 }
 .closeLogo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    fill: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  fill: black;
 }
