--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,12 @@
 <header>
   <div class="container">
-    <a href="">
+    <a href="" aria-label="Back to main page">
       <div class="logo"></div>
     </a>
   </div>
 
   <div class="toolbar">
-    <button class="header-my-favorites-btn" data-action="open-modal">My favorites</button>
+    <button class="header-my-favorites-btn" data-action="open-modal" aria-label="Open favorite events">My favorites</button>
     <!-- Разметка переключателя темы -->
     <div class="theme-switch">
       <span class="material-icons sun"> brightness_low </span>
