--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,7 @@
         FIND BEST EVENTS <br />
         AROUND THE WORLD
       </h1>
-      <button class="btn-authentication" type="button" data-modal-open-authentication>
+      <button aria-label="Sign up or log in" class="btn-authentication" type="button" data-modal-open-authentication>
         Sign UP | Log in
       </button>
     </div>
