--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <p class="footer-text">
     © 2021 | All Rights Reserved | Developed with <span class="footer-heart">♥</span
-    ><button data-modal-open type="button" class="students">by GoIT Students</button>
+    ><button data-modal-open type="button" class="students" aria-label="Open developers information">by GoIT Students</button>
   </p>
 </footer>
