--- a/src/partials/modal-window-authentication.html
+++ b/src/partials/modal-window-authentication.html
@@ -1,6 +1,6 @@
 <div data-modal-backdrop-authentication id="modal-authentication" class="authentication-overlay">
   <div class="modal-authentication">
-    <button data-modal-window-close-authentication class="modal__btn">
+    <button aria-label="Close modal window" data-modal-window-close-authentication class="modal__btn">
       <span class="modal__btn_close"></span>
     </button>
     <p class="greeting-authentication"></p>
@@ -20,13 +20,13 @@
     </div>
     <ul class="btn-list">
       <li class="btn-list-item">
-        <button id="btnLogin" class="btn-authentication-modal btn-action-login">Log in</button>
+        <button aria-label="Log in" id="btnLogin" class="btn-authentication-modal btn-action-login">Log in</button>
       </li>
       <li class="btn-list-item">
-        <button id="btnSignUp" class="btn-authentication-modal btn-secondary">Sign UP</button>
+        <button aria-label="Sign up" id="btnSignUp" class="btn-authentication-modal btn-secondary">Sign UP</button>
       </li>
       <li class="btn-list-item">
-        <button id="btnLogout" class="btn-authentication-modal btn-action disabled-btn">
+        <button aria-label="Log out" id="btnLogout" class="btn-authentication-modal btn-action disabled-btn">
           Log out
         </button>
       </li>
