--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden team__backdrop" data-modal>
   <div class="modal-team">
-    <button data-modal-close class="modal__btn">
+    <button aria-label="Close modal" data-modal-close class="modal__btn">
       <span class="modal__btn_close"></span>
     </button>
     <h3 class="modalTitle">Our development team</h3>
@@ -16,7 +16,12 @@
         <p class="position">Team Lead</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/ketryin" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/ketryin"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -24,6 +29,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="http://linkedin.com/in/kateryna-kraieva-561237207"
               target="_blank"
@@ -46,7 +52,12 @@
         <p class="position">Scrum Master</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/Nastance" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/Nastance"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -54,6 +65,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/anastasiia-haltseva-3898081a8"
               target="_blank"
@@ -76,7 +88,12 @@
         <p class="position">Developer</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/APilganchuk" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/APilganchuk"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -84,6 +101,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/aleksandr-pilganchuk-891a7b205/"
               target="_blank"
@@ -106,7 +124,12 @@
         <p class="position">Developer</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/IhorWenher" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/IhorWenher"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -114,6 +137,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/ihor-venher-646656207"
               target="_blank"
@@ -136,7 +160,12 @@
         <p class="position">Developer</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/LidiaStrelets" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/LidiaStrelets"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -144,6 +173,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/lidiia-strelets-848501214/"
               target="_blank"
@@ -169,6 +199,7 @@
         <ul class="social">
           <li>
             <a
+              aria-label="Open github link"
               class="social-item"
               href="https://github.com/Oleh-N-Lunin?tab=repositories"
               target="_blank"
@@ -180,6 +211,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/%D0%BE%D0%BB%D0%B5%D0%B3-%D0%BB%D1%83%D0%BD%D0%B8%D0%BD-922068194/"
               target="_blank"
@@ -202,7 +234,12 @@
         <p class="position">Developer</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/NOS-DONE" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/NOS-DONE"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -210,6 +247,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/олег-нестеренко-2818a1b2"
               target="_blank"
@@ -232,7 +270,12 @@
         <p class="position">Developer</p>
         <ul class="social">
           <li>
-            <a class="social-item" href="https://github.com/YuriiDotsenko" target="_blank">
+            <a
+              aria-label="Open github link"
+              class="social-item"
+              href="https://github.com/YuriiDotsenko"
+              target="_blank"
+            >
               <svg width="20px" height="20px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
@@ -240,6 +283,7 @@
           </li>
           <li>
             <a
+              aria-label="Open linkedin"
               class="social-item"
               href="https://www.linkedin.com/in/yurii-dotsenko-42330a215/"
               target="_blank"
