--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -8,7 +8,7 @@
 }
 
 body.light-theme {
-  background-color: #dcdcdc;
+  background-color: #ffffff;
 
   & .hero {
     background-image: linear-gradient(
