--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -50,9 +50,9 @@ body.light-theme {
       1px, 1px, 1px, cover;
     background-repeat: no-repeat;
     background-position: left 47px top 882px, left 7px top 842px, left 23px top 1554px,
-      left 47px bottom 0px, left 7px bottom 0px, left 976px top 528px, left 1117px top 1989px,
-      left 1077px top 1949px, left 976px top 2252px, left 115px top 100px, left 115px top 1057px,
-      left 115px top 1287px, left 1185px top 110px, left 1185px top 754px, left 1185px top 1860px,
+      left 47px bottom 0px, left 7px bottom 0px, right 36px top 528px, right 96px top 1989px,
+      right 56px top 1949px, right 36px top 2252px, left 115px top 100px, left 115px top 1057px,
+      left 115px top 1287px, right 163px top 110px, right 163px top 754px, right 163px top 1860px,
       center;
   }
 
@@ -143,9 +143,9 @@ body {
       1px, 1px, 1px, cover;
     background-repeat: no-repeat;
     background-position: left 47px top 882px, left 7px top 842px, left 23px top 1554px,
-      left 47px bottom 0px, left 7px bottom 0px, left 976px top 528px, left 1117px top 1989px,
-      left 1077px top 1949px, left 976px top 2252px, left 115px top 100px, left 115px top 1057px,
-      left 115px top 1287px, left 1185px top 110px, left 1185px top 754px, left 1185px top 1860px,
+      left 47px bottom 0px, left 7px bottom 0px, right 36px top 528px, right 96px top 1989px,
+      right 56px top 1949px, right 36px top 2252px, left 115px top 100px, left 115px top 1057px,
+      left 115px top 1287px, right 163px top 110px, right 163px top 754px, right 163px top 1860px,
       center;
   }
 }
