--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -42,7 +42,7 @@ body.light-theme {
       url(../images/svg/ellipse-6.svg), url(../images/svg/ellipseLightTheme-11.svg),
       url(../images/svg/ellipse-10.svg), url(../images/svg/ellipse-4.svg),
       url(../images/svg/ellipseLightTheme-2.svg), url(../images/svg/ellipse-7.svg),
-      url(../images/svg/ellipse-9.svg), url(../images/svg/Line-1.svg), url(../images/svg/line-3.svg),
+      url(../images/svg/ellipse-9.svg), url(../images/svg/line-1.svg), url(../images/svg/line-3.svg),
       url(../images/svg/line-3.svg), url(../images/svg/line-2.svg), url(../images/svg/line-2.svg),
       url(../images/svg/line-2.svg), url(../images/noise-body.png);
 
