--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -1,7 +1,7 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="modal-team">
-    <button data-modal-close class="modal__btn">
-      <span class="modal__btn_close"></span>
+    <button data-modal-close >
+      <span class="modal_btn_close"></span>
     </button>
     <h3 class="modalTitle">Our development team</h3>
     <ul class="headlines-list1 list">
