--- a/src/sass/modul-window-our-team/_modul-window-our-team.scss
+++ b/src/sass/modul-window-our-team/_modul-window-our-team.scss
@@ -1,4 +1,6 @@
-
+body.modal_open {
+    overflow: hidden;
+}
 .backdrop {
     position: fixed;
     top: 0;
@@ -18,19 +20,77 @@
 .backdrop.is-hidden .modal-team {
     transform: translate(-50%, -50%) scale(1.1);
 }
+
 .modal-team {
+    @media screen and (max-width: 319px) {
+        width: 248px;
+        min-height: auto;
+        border-radius: 80px 0;
+        top: 50%;
+    left: 50%;
+      }
+      @media screen and (min-width: 320px) {
+        position: fixed;
+        width: 248px;
+        top: 100px;
+    left: 50%;
+    overflow-y: auto;
+    transform: translate(-50%, -50px) scale(1);
+        height: 640px;
+        margin-top: 10px;
+        border-radius: 80px 0;
+        background-color: #FFF2FD;
+        // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      @media screen and (min-width: 595px) {
+          position: relative;
+          margin: 0;
+          left: 50%;
+          right: 50%;
+          top: 50%;
+          bottom: 50%;
+          transform: translate(-50%, -50%) scale(1);
+        width: 595px;
+        height: 350px;
+        border-radius: 100px 0;
+        background-color: #FFF2FD;
+      }
+      @media screen and (min-width: 1050px) {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     width: 1100px;
-    height: 640px;
+    height: 650px;
     background-color: #FFF2FD;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 120px 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close {
+}
+.modal_btn_close {
+    @media screen and (max-width: 319px) {
+        position: fixed;
+        padding: 0;
+        background-color: #FFF2FD;
+
+    }
+    @media screen and (min-width: 320px) {
+    position: fixed;
+    padding: 0;
+    background-color: #FFF2FD;
+    top: 4px;
+    right: 4px;
+    width: 20px;
+    height: 20px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    @media screen and (min-width: 595px) {
+        top: 6px;
+        right: 6px;
+        width: 25px;
+        height: 25px;
+    }
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,17 +101,51 @@
     right: 8px;
     width: 30px;
     height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-   border-radius: 50%;
+    border-radius: 50%;
    cursor: pointer;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal_btn_close::before {
+    transform: rotate(-45deg);
+    transition: transform 300ms linear;
+    position: absolute;
+    display: block;
+    content: '';
+    width: 20px;
+    height: 3px;
+    background-color: #4c00fe;
+  }
+  
+  .modal_btn:hover .modal__btn_close::before {
+    transform: rotate(-130deg);
+  }
+  
+  .modal_btn:hover .modal__btn_close::after {
+    transform: rotate(130deg);
+  }
+  
+  .modal_btn_close::after {
+    transform: rotate(45deg);
+    transition: transform 300ms linear;
+    position: absolute;
+    display: block;
+    content: '';
+    width: 20px;
+    height: 3px;
+    background-color: #4c00fe;
+  }
 .modalTitle {
+    @media screen and (min-width: 320px) {
+    font-size: 20px;
+    margin-left: 10px;
+    }
+    @media screen and (min-width: 595px) {
+        font-size: 23px;
+    }
     font-family: Montserrat;
     margin-top: 10px;
     margin-bottom: 20px;
     color: #DC56C5;
-    text-shadow: 2px 2px 4px #000000;
     font-weight: 700;
     font-size: 25px;
     line-height: 1.19;
@@ -59,6 +153,10 @@
 }
 
 .personal-item {
+    @media screen and (min-width: 320px) {
+        display: inline-block;
+    margin: 0 0 10px 0;
+    }
     position: relative;
     width: 180px;
     height: 260px;
@@ -102,6 +200,10 @@
     color: #242424;
 }
 .headlines-list1 {
+    @media screen and (min-width: 320px) {
+    display: block;
+    margin: 0;
+    }
     display: flex;
     flex-wrap: wrap;
     margin-left: 80px;
@@ -109,6 +211,10 @@
     text-align: center;
 }
 .headlines-list2 {
+    @media screen and (min-width: 320px) {
+        display: block;
+        margin: 0 0 30px 0;
+        }
     display: flex;
     flex-wrap: wrap;
     margin-left: 35px;
