--- a/src/templates/modal-card-details.hbs
+++ b/src/templates/modal-card-details.hbs
@@ -20,6 +20,7 @@
                             {{else}}Oops! No info here :(
                             {{/if}}
                         </p>
+                        <span class="show-more">show more</span>
                     </li>
                     <li class="modal__item">
                         <b class="modal__title">WHEN </b>
