correct-mobile-version

--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -12,28 +12,27 @@
           width="150"
           alt="фото фронтэнд разработчика"
         />
+        
         <h3 class="headlines-name">Kate Kraieva</h3>
         <p class="position">Team Lead</p>
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/ketryin" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a
-              class="social-item"
-              href="http://linkedin.com/in/kateryna-kraieva-561237207"
-              target="_blank"
-            >
-              <svg width="20px" height="20px">
+            <a class="social-item"
+              href="http://linkedin.com/in/kateryna-kraieva-561237207" target="_blank">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
+      
       </li>
       <li class="personal-item">
         <img
@@ -47,7 +46,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/Nastance" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -58,7 +57,7 @@
               href="https://www.linkedin.com/in/anastasiia-haltseva-3898081a8"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -77,7 +76,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/APilganchuk" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -88,7 +87,7 @@
               href="https://www.linkedin.com/in/aleksandr-pilganchuk-891a7b205/"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -107,7 +106,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/IhorWenher" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -118,7 +117,7 @@
               href="https://www.linkedin.com/in/ihor-venher-646656207"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -137,7 +136,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/LidiaStrelets" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -148,7 +147,7 @@
               href="https://www.linkedin.com/in/lidiia-strelets-848501214/"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -173,7 +172,7 @@
               href="https://github.com/Oleh-N-Lunin?tab=repositories"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -184,7 +183,7 @@
               href="https://www.linkedin.com/in/%D0%BE%D0%BB%D0%B5%D0%B3-%D0%BB%D1%83%D0%BD%D0%B8%D0%BD-922068194/"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -203,7 +202,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/NOS-DONE" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -214,7 +213,7 @@
               href="https://www.linkedin.com/in/олег-нестеренко-2818a1b2"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -233,7 +232,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/YuriiDotsenko" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -244,7 +243,7 @@
               href="https://www.linkedin.com/in/yurii-dotsenko-42330a215/"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -263,7 +262,7 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/MohBat6" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
@@ -274,7 +273,7 @@
               href="https://www.linkedin.com/in/yevhen-yurchak-12901a8b/"
               target="_blank"
             >
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -293,14 +292,14 @@
         <ul class="social">
           <li>
             <a class="social-item" href="https://github.com/Serhii-Fedorenko" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use href="./../src/images/svg/symbol.svg#git"></use>
               </svg>
             </a>
           </li>
           <li>
             <a class="social-item" href="" target="_blank">
-              <svg width="20px" height="20px">
+              <svg width="16px" height="16px">
                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
               </svg>
             </a>
